# llms-from-scratch

./: README.md  pyproject.toml
llms_from_scratch/: __init__.py  attention.py
notes/: cursor.md
