[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Building LLMs from scratch"
authors = [
    {name = "Yenson Lau", email = "yenson.lau@gmail.com"}
]
dependencies = [
    "numpy>=2.1.3",
    "torch>=2.5.1",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "ipython>=8.30.0",
]
